--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ env:
     - LANG=en_US.UTF-8
   matrix:
     - TEST_TYPE=iOS
-    - TEST_TYPE=OSX
+    - TEST_TYPE=macOS
     - TEST_TYPE=Deployment
     - TEST_TYPE=Starters
     - TEST_TYPE=CocoaPods
@@ -33,6 +33,6 @@ script:
   bundle exec rake test:$TEST_TYPE
 after_success:
 - |
-  if [ "$TEST_TYPE" = "ios" ] || [ "$TEST_TYPE" = "osx" ]; then
+  if [ "$TEST_TYPE" = "iOS" ] || [ "$TEST_TYPE" = "macOS" ]; then
     bash <(curl -s https://codecov.io/bash)
   fi
